syntax = "proto3";

option csharp_namespace = "AdministrativeServer";

package greet;

service ABMUsers {
    rpc AddUser (UserModel) returns (InfoResponse);
    rpc ModifyUser (UserModel) returns (InfoResponse);
    rpc DeleteUser (UserModel) returns (InfoResponse);
}

message UserModel{
    string name = 1;
    string surname = 2;
    string username = 3;
    string password = 4;
}

message InfoResponse{
    string message = 1;
}